# os-labs

./: CMakeLists.txt  main.cpp  utility.sh
dummy/12/dir2/: file.txt
dummy/12/dir3/: file.txt
dummy/7/: targets.txt
include/: bconsumer.h  bproducer.h  buffer.h  consumer.h  p_producer_consumer.h  producer.h  reader_writer.h  signal_handler.h
src/: bconsumer.cpp  bproducer.cpp  buffer.cpp  consumer.cpp  p_producer_consumer.cpp  producer.cpp  reader_writer.cpp  signal_handler.cpp
